// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input - basic functionality: input has correct props 1`] = `
Object {
  "aria-describedby": null,
  "aria-errormessage": null,
  "aria-invalid": false,
  "aria-label": null,
  "aria-labelledby": null,
  "aria-required": false,
  "autoComplete": "on",
  "children": null,
  "disabled": false,
  "id": undefined,
  "inputMode": "text",
  "max": undefined,
  "min": undefined,
  "name": "",
  "onBlur": [Function],
  "onChange": [MockFunction],
  "onFocus": [Function],
  "onKeyDown": [MockFunction],
  "onKeyPress": [MockFunction],
  "onKeyUp": [MockFunction],
  "pattern": null,
  "placeholder": "Placeholder",
  "required": false,
  "rows": null,
  "styled-component": "true",
  "test-style": "{
  \\"boxSizing\\": \\"border-box\\",
  \\"backgroundColor\\": \\"transparent\\",
  \\"borderLeftWidth\\": 0,
  \\"borderRightWidth\\": 0,
  \\"borderTopWidth\\": 0,
  \\"borderBottomWidth\\": 0,
  \\"borderLeftStyle\\": \\"none\\",
  \\"borderRightStyle\\": \\"none\\",
  \\"borderTopStyle\\": \\"none\\",
  \\"borderBottomStyle\\": \\"none\\",
  \\"outline\\": \\"none\\",
  \\"width\\": \\"100%\\",
  \\"maxWidth\\": \\"100%\\",
  \\"cursor\\": \\"text\\",
  \\"margin\\": \\"0\\",
  \\"paddingTop\\": \\"$theme.sizing.scale400\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale400\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale550\\",
  \\"paddingRight\\": \\"$theme.sizing.scale550\\",
  \\"fontFamily\\": \\"$theme.typography.font300.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.font300.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.font300.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.font300.lineHeight\\",
  \\"color\\": \\"$theme.colors.contentPrimary\\",
  \\"caretColor\\": \\"$theme.colors.contentPrimary\\",
  \\"::placeholder\\": {
    \\"color\\": \\"$theme.colors.inputPlaceholder\\"
  }
}",
  "type": "text",
  "value": "input value",
}
`;

exports[`Input - renders enhancers: input has correct props when end enhancers added 1`] = `
Object {
  "$adjoined": "right",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$positive": false,
  "$required": false,
  "$size": "default",
  "children": Array [
    <NullComponent
      $adjoined="right"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $positive={false}
      $required={false}
      $size="default"
    />,
    <ForwardRef
      $adjoined="right"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $positive={false}
      $required={false}
      $size="default"
      aria-describedby={null}
      aria-errormessage={null}
      aria-invalid={false}
      aria-label={null}
      aria-labelledby={null}
      aria-required={false}
      autoComplete="on"
      disabled={false}
      inputMode="text"
      name=""
      onBlur={[Function]}
      onChange={[MockFunction]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      pattern={null}
      placeholder=""
      required={false}
      rows={null}
      type="text"
    />,
    null,
    null,
    <NullComponent
      $adjoined="right"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $positive={false}
      $required={false}
      $size="default"
    />,
  ],
  "data-baseweb": "base-input",
}
`;

exports[`Input - renders enhancers: input has correct props when enhancers added 1`] = `
Object {
  "$adjoined": "both",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$positive": false,
  "$required": false,
  "$size": "default",
  "children": Array [
    <NullComponent
      $adjoined="both"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $positive={false}
      $required={false}
      $size="default"
    />,
    <ForwardRef
      $adjoined="both"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $positive={false}
      $required={false}
      $size="default"
      aria-describedby={null}
      aria-errormessage={null}
      aria-invalid={false}
      aria-label={null}
      aria-labelledby={null}
      aria-required={false}
      autoComplete="on"
      disabled={false}
      inputMode="text"
      name=""
      onBlur={[Function]}
      onChange={[MockFunction]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      pattern={null}
      placeholder=""
      required={false}
      rows={null}
      type="text"
    />,
    null,
    null,
    <NullComponent
      $adjoined="both"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $positive={false}
      $required={false}
      $size="default"
    />,
  ],
  "data-baseweb": "base-input",
}
`;

exports[`Input - renders enhancers: input has correct props when start enhancers added 1`] = `
Object {
  "$adjoined": "left",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$positive": false,
  "$required": false,
  "$size": "default",
  "children": Array [
    <NullComponent
      $adjoined="left"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $positive={false}
      $required={false}
      $size="default"
    />,
    <ForwardRef
      $adjoined="left"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $positive={false}
      $required={false}
      $size="default"
      aria-describedby={null}
      aria-errormessage={null}
      aria-invalid={false}
      aria-label={null}
      aria-labelledby={null}
      aria-required={false}
      autoComplete="on"
      disabled={false}
      inputMode="text"
      name=""
      onBlur={[Function]}
      onChange={[MockFunction]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      pattern={null}
      placeholder=""
      required={false}
      rows={null}
      type="text"
    />,
    null,
    null,
    <NullComponent
      $adjoined="left"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $positive={false}
      $required={false}
      $size="default"
    />,
  ],
  "data-baseweb": "base-input",
}
`;
